@@ -1,3 +1,8 @@
+2002-08-26  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* generic/tclThreadAlloc.c: small optimisation, reducing the
+	new allocator's overhead.
+	
 2002-08-23  Miguel Sofer  <msofer@users.sourceforge.net>
 
 	* generic/tclObj.c (USE_THREAD_ALLOC): fixed leak [Bug 597936]. 
